# housing-fullstack

./: LICENCE
backend/: pyproject.toml
backend/api/: config.py  main.py  requirements.txt
backend/api/db/: models.py
backend/api/routers/: routers.py
