[tool.poetry]
name = "housing farm stack demo"
version = "0.1.0"
description = "using the FARM stack to build a full stack system"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
